--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"start": "tsc --skipLibCheck && node dist/app.js"
 	},
 	"dependencies": {
+		"axios": "^1.7.7",
 		"csvtojson": "^2.0.10",
 		"dotenv": "^16.4.5",
 		"ton": "^13.9.0",
