--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start": "tsc --skipLibCheck && node dist/app.js"
 	},
 	"dependencies": {
-		"axios": "^1.7.7",
+		"@ton/ton": "^15.0.0",
 		"csvtojson": "^2.0.10",
 		"dotenv": "^16.4.5",
 		"ton": "^13.9.0",
